# interval-set

./: interval-set.cabal
Data/: Interval.hs  IntervalSet.hs
benchmarks/: Benchmark.hs
benchmarks/Benchmark/: IntervalSet.hs
benchmarks/Random/: Interval.hs  IntervalSet.hs
tests/: Test.hs
tests/Test/: Balance.hs  Correctness.hs  Interval.hs  IntervalSet.hs  Validity.hs
