name:                interval-set
version:             0.1.0.0
synopsis:            Container for Sets of Disjoint Integer Intervals
license:             BSD3
license-file:        LICENSE
author:              Ian Milligan
maintainer:          ianmllgn@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:      Data.Interval, Data.IntervalSet
  build-depends:        base >=4.6 && <4.7,
                        containers >=0.5 && <0.6,
                        lens >= 4.0 && < 4.2,
                        mtl >= 2.1 && < 2.2
  default-language:     Haskell2010

Test-Suite tasty
    type: exitcode-stdio-1.0
    hs-source-dirs: tests
    main-is: Test.hs
    build-depends: base, interval-set, tasty, smallcheck, tasty-smallcheck
    default-language: Haskell2010
    default-extensions: FlexibleInstances, MultiParamTypeClasses
